# abc-to-midi

./: Cargo.toml  LICENSE  README.md
src/: abc_wrappers.rs  accidentals.rs  conversion.rs  errors.rs  grammar.rs  key_signatures.rs  lib.rs  main.rs  midly_wrappers.rs  time_signatures.rs
test-asset/: accidentals.abc  accidentals.mid  chord.abc  chord.mid  the-origin-of-the-world.abc  the-origin-of-the-world.mid  two-bars.abc  two-bars.mid  untitled-reel.abc  untitled-reel.mid
tests/: abc2midi_parity.rs
