[package]
name = "abc-to-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abc-parser = "0.3.0"
derive_more = "0.99.17"
midly = { version = "0.5.2", default-features = false, features = ["std"] }
num-traits = "0.2.14"

[dev-dependencies]
pretty_assertions = "1.0.0"
rstest = "0.12.0"
